# Indicium_Tech_Code_Challenge

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  files_def.json  meltano.yml  pyproject.toml  requirements.txt
.meltano/: analytics.json  meltano.db
.meltano/run/tap-csv/: tap.properties.cache_key  tap.properties.json
.meltano/run/tap-postgres/: tap.properties.cache_key  tap.properties.json
.meltano/run/tap-s3-csv/: state.json  tap.properties.cache_key  tap.properties.json
config/: airflow.cfg
dags/: create_s3_bucket_aws.py  stage1.py  stage2.py  teste_aws.py
data/: job_metrics.json
data/csv/2024-06-07/: order_details.csv
data/csv/2024-06-08/: order_details.csv
data/csv/2024-06-09/: order_details.csv
data/csv/2024-06-10/: order_details.csv
data/csv/2024-06-11/: order_details.csv
data/csv/2024-06-12/: order_details.csv
data/csv/2024-06-13/: order_details.csv
data/csv/2024-06-14/: order_details.csv
data/csv/2024-06-15/: order_details.csv
data/csv/2024-06-16/: order_details.csv
data/postgres/customers/2024-06-09/: customers.csv
data/postgres/employees/2024-06-11/: employees.csv
data/postgres/orders/2024-06-11/: orders.csv
data/postgres/products/2024-06-10/: products.csv
data/postgres/suppliers/2024-06-15/: suppliers.csv
data_provided/: northwind.sql
query/: result.sql
query_result/: query_result.csv
src/: change_path_json.py  move_files.py  rename_files.py
src/resources/: config.py
