[tool.poetry]
name = "Indicium_Tech_Code_Challenge"
version = "0.1.0"
description = ""
authors = ["RafaelAndradeDEV <rafaelandradeoli05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
meltano = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
